# ros2env

./: .gitignore  Cargo.toml  README.md  SETUP_GUIDE.md  USAGE.md  cliff.toml  test.sh
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/: version.ts
docs/src/content/docs/: contributing.md  contributing.mdx  getting-started.md  index.md  index.mdx  index.mdx.old  pixi-workspaces.mdx
docs/src/content/docs/commands/: core.md  core.mdx  distribution.md  distribution.mdx  index.md  index.mdx  management.md  management.mdx
docs/src/styles/: custom.css
output/osx-arm64/: repodata.json  rosenv-0.1.0-h60d57d3_0.tar.bz2
recipe/: recipe.yaml
src/: cli.rs  distro.rs  doctor.rs  main.rs  pixi.rs  setup.rs  shell.rs  symlink.rs
src/assets/: activate.sh  deactivate.sh  helpers.sh  init.sh  pixi_activate_base.sh  pixi_activate_global.sh
tests/: edge_cases.rs  integration_tests.rs
