[package]
name = "ros2env"
version = "0.1.0"
edition = "2021"
authors = ["Alvaro J. Gaona"]
description = "ROS 2 distribution environment manager for Pixi global installations"
repository = "https://github.com/alvgaona/ros2env"
license-file = "LICENSE"
keywords = ["ros", "ros2", "pixi", "robotics", "environment"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://alvgaona.gitbook.io/ros2env"

[[bin]]
name = "rosenv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
