[package]
name = "ros2env"
version = "0.1.0"
edition = "2021"
authors = ["Alvaro J. Gaona"]
description = "ROS 2 distribution environment manager for Pixi global installations"
repository = "https://github.com/alvgaona/ros2env"
license = "MIT"
keywords = ["ros", "ros2", "pixi", "robotics", "environment"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://alvgaona.gitbook.io/ros2env"

[[bin]]
name = "rosenv"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rosenv-{ target }-v{ version }.tar.gz"
bin-dir = "rosenv"
pkg-fmt = "tgz"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
dirs = "5.0"

